# LLM-AAI

./: .gitignore  README.md  options.yaml  pyproject.toml  user_settings_template.py
data/arena_configs/competition/children_combined_configs/: test.yaml  tutorial.yaml
data/arena_configs/competition/children_tutorials/: 00-01-01.yaml  00-02-01.yaml  00-02-02.yaml  00-02-03.yaml  00-02-04.yaml  00-03-01.yaml  00-04-01.yaml  00-05-01.yaml  00-06-01.yaml  00-07-01.yaml
data/arena_configs/sanity_green/: sanity_green.yaml
data/tutorial_video/: notes.txt  tutorial_video_arena_n_shot_commands.pkl  tutorial_video_arena_n_shot_commands.txt  tutorial_video_arena_with_rotated_boxes.yaml
data/tutorial_video/tutorial_video_replay/: options.yaml
scripts/: main.py
src/definitions/: action.py  cardinal_directions.py  constants.py
src/definitions/prompts/: observations.py  prompts.py
src/experimentation/: options_helper.py  suite.py
src/experimentation/experiments/: experiment.py  experiment1.py  experiment_factory.py
src/llm_scripting/: README.md  minimal_parser.py
src/llms/: claude.py  gemini.py  gpt.py  human.py  llm.py  llm_to_api_key.py  recording.py  session_factory.py
src/utilities/: utils.py
src/vision/: camera.py  vision.py
tests/experimentation/: example_options.yaml  test_option_helper.py
tests/experimentation/suites_empty_for_cost_testing/: README.md
tests/llm_scripting/: test_minimal_parser.py  test_minimal_parser_aai.py  test_minimal_parser_llm.py
tests/llms/: test_llm.py  test_session_factory.py
(+43 files in other folders)
