[project]
name = "AAILLM"
version = "0.1.0"
description = "Add a short description here"
requires-python = "<3.10"
dependencies = ["animalai"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
AAILLM = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.9.*"
anthropic = ">=0.26.1,<0.27"
numpy = "==1.21.2"
openai = ">=1.50.2,<2"
tiktoken = ">=0.7.0,<0.8"
google-generativeai = ">=0.8.2,<0.9"
google-api-core = ">=2.20.0,<3"
protobuf = "==3.20.3"
matplotlib = ">=3.8.4,<4"
pytest = ">=8.3.3,<9"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
